# meshcore-tools

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  channels.txt.sample  config.toml.sample  justfile  nodes.py  pyproject.toml  secrets.toml.sample
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/skills/gen-test/: SKILL.md
.claude/skills/update-changelog/: SKILL.md
.claude/skills/update-readme/: SKILL.md
.cmux/: dock.json
.githooks/: post-checkout  post-commit
.github/workflows/: ci.yml  claude-code-review.yml
docs/superpowers/plans/: 2026-03-29-companion-tui.md  2026-03-29-connect-screen-device-discovery.md
docs/superpowers/specs/: 2026-03-29-companion-tui-design.md  2026-03-29-companion-tui-session-context.md  2026-03-29-connect-screen-device-discovery-design.md
plans/: issue-33-disambiguation.md
scripts/: test_mqtt_live.py
src/lma/: api.py  channels.py  cli.py  db.py  decoder.py  map_view.py  monitor.py  nodes.py
src/meshcore_tools/: app.py  channels.py  chat.py  cli.py  companion.py  companion_tab.py  config.py  connection.py  contacts.py  contacts_store.py  db.py  disambiguation.py  logtab.py  map_view.py  meshcore_api.py  monitor.py  passwords.py  repeaters.py  resize_handle.py
src/meshcore_tools/providers/: letsmesh_rest.py  mqtt_provider.py
tests/: test_api.py  test_channels.py  test_companion_messages.py  test_companion_protocols.py  test_config.py  test_connection_config.py  test_contacts_store.py  test_db.py  test_decoder.py  test_disambiguation.py  test_map_view.py  test_monitor_tab.py  test_mqtt_provider.py  test_nodes.py  test_passwords.py
tests_live/: test_mqtt_e2e.py
