[project]
name = "meshcore-tools"
dynamic = ["version"]
description = "meshcore tools — node database and live packet monitor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["textual>=0.80", "msgpack>=1.0", "pycryptodome>=3.19", "pyserial>=3.5"]

[project.optional-dependencies]
map = ["textual-image", "staticmap", "Pillow"]
companion = ["meshcore>=2.3.3"]

[project.scripts]
meshcore-tools = "meshcore_tools.cli:main"

[tool.hatch.version]
path = "src/meshcore_tools/__version__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meshcore_tools"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".claude/",
    ".github/",
    ".githooks/",
    "CLAUDE.md",
    "justfile",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
